Vendo as estruturas de repetição

--- a/Conceitos_python.ipynb
+++ b/Conceitos_python.ipynb
@@ -6,7 +6,7 @@
       "name": "Conceitos_python.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP2VHSCeabWpBY6RqsKZXdC",
+      "authorship_tag": "ABX9TyP4Xxb12RBNb2DmPfEDj6Q8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -358,6 +358,33 @@
       "metadata": {
         "id": "mKwi-uwJ86q7"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for c in range(0,4):\n",
+        "  print (c)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iwlPgy28-DVu",
+        "outputId": "9523cdf2-a04b-45f5-e58c-d2df892c144d"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n"
+          ]
+        }
+      ]
     }
   ]
 }
