Limpando as saidas

--- a/Conceitos_python.ipynb
+++ b/Conceitos_python.ipynb
@@ -6,8 +6,7 @@
       "name": "Conceitos_python.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP4Xxb12RBNb2DmPfEDj6Q8",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyP4Xxb12RBNb2DmPfEDj6Q8"
     },
     "kernelspec": {
       "name": "python3",
@@ -18,16 +17,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/isaacunha/EstudosPython/blob/main/Conceitos_python.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -305,22 +294,10 @@
         "  print(\"Reprovado\")"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "2zHcHlWl8DA0",
-        "outputId": "09d861cc-92eb-48ea-d2a6-c16b7fe9d57b"
+        "id": "2zHcHlWl8DA0"
       },
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Reprovado\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -333,22 +310,10 @@
         "  print('Reprovado')"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "bjieluzY8YH5",
-        "outputId": "04e27f21-4920-4b59-a276-15a32f5d1414"
+        "id": "bjieluzY8YH5"
       },
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Reprovado\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -366,25 +331,10 @@
         "  print (c)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "iwlPgy28-DVu",
-        "outputId": "9523cdf2-a04b-45f5-e58c-d2df892c144d"
+        "id": "iwlPgy28-DVu"
       },
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "0\n",
-            "1\n",
-            "2\n",
-            "3\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
