--- a/Conceitos_python.ipynb
+++ b/Conceitos_python.ipynb
@@ -9,8 +9,7 @@
       "collapsed_sections": [
         "mKwi-uwJ86q7"
       ],
-      "authorship_tag": "ABX9TyN7SkryKdOICCSD3YJyzjeW",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyNp/frAdkORPIk6sLxzV5Bz"
     },
     "kernelspec": {
       "name": "python3",
@@ -21,16 +20,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/isaacunha/EstudosPython/blob/main/Conceitos_python.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -746,6 +735,135 @@
           "name": "stdout",
           "text": [
             "{'nome': 'Isabella', 'sexo': 'feminino', 'hobbie': 'ler'}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Funções"
+      ],
+      "metadata": {
+        "id": "yTvtkZeJflOv"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def identificacao(nome,idade):\n",
+        "  print ('Olá', nome, '\\nVoce é jovem, tem apenas', idade)"
+      ],
+      "metadata": {
+        "id": "OC8ZIMoVfv6z"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "identificacao('Isabella',23)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0fT9s4_7hM3A",
+        "outputId": "32f9699e-4d8e-4d5f-85c3-7e71acd152d7"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Olá Isabella \n",
+            "Voce é jovem, tem apenas 23\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def maior (x,y):\n",
+        "  if x<y:\n",
+        "    print('O maior numero é ', y)\n",
+        "  elif x>y:\n",
+        "    print(\"o maior numero é:\", x)\n",
+        "  else:\n",
+        "    print(\"Os numeros são iguais\")"
+      ],
+      "metadata": {
+        "id": "2RnaTTDkhTVl"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "maior(26,26)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-J52pe4YiC3F",
+        "outputId": "a2a9178c-ace9-470b-b396-4fa6aaa09c7d"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Os numeros são iguais\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def pitagoras (cat1, cat2, hip):\n",
+        "  if hip ==\"?\":\n",
+        "    hip = (cat1**2 + cat2**2)**(1/2)\n",
+        "    print (\"A hipotenusa é\", cat1)\n",
+        "  elif cat1 ==\"?\":\n",
+        "    cat1 = (hip**2 - cat2**2)**(1/2)\n",
+        "    print (\"O cateto é\", cat1)\n",
+        "  elif cat2 ==\"?\":\n",
+        "    cat2 = (hip**2 - cat1**2)**(1/2)\n",
+        "    print (\"O cateto é\", cat2)"
+      ],
+      "metadata": {
+        "id": "U6xSTaM5iFsn"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#pitagoras (cat1, cat2, hip)\n",
+        "pitagoras(3,4,\"?\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SVnpfa1PjAa6",
+        "outputId": "6993bae1-c136-4d02-a88e-8c0d8dbe13f0"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "A hipotenusa é 3\n"
           ]
         }
       ]
