--- a/Conceitos_python.ipynb
+++ b/Conceitos_python.ipynb
@@ -9,7 +9,8 @@
       "collapsed_sections": [
         "mKwi-uwJ86q7"
       ],
-      "authorship_tag": "ABX9TyNp/frAdkORPIk6sLxzV5Bz"
+      "authorship_tag": "ABX9TyNCzc+GoXn4LfrXh91JtCsE",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -20,6 +21,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/isaacunha/EstudosPython/blob/main/Conceitos_python.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -334,25 +345,10 @@
         "  print (c)"
       ],
       "metadata": {
-        "id": "iwlPgy28-DVu",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "4f92cd58-8674-4288-c4af-6f39fdfb2b4a"
+        "id": "iwlPgy28-DVu"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "0\n",
-            "1\n",
-            "2\n",
-            "3\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -363,26 +359,10 @@
         "  print (mult)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "NOsR3dNZ5lKG",
-        "outputId": "6e8fe4dd-476f-4ccc-aed5-30db402b0c20"
+        "id": "NOsR3dNZ5lKG"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "2\n",
-            "4\n",
-            "6\n",
-            "8\n",
-            "10\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -397,27 +377,10 @@
         "print (\"voce informou {} numeros pares e a soma deles é igual {}\". format(cont, soma))"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "-ZTU8S-w7AJ1",
-        "outputId": "d0a2b1a7-3a16-43d3-e4f1-92815aac24b4"
+        "id": "-ZTU8S-w7AJ1"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "digite o 1º valor: 2\n",
-            "digite o 2º valor: 5\n",
-            "digite o 3º valor: 3\n",
-            "digite o 4º valor: 1\n",
-            "digite o 5º valor: 5\n",
-            "voce informou 1 numeros pares e a sola deles é igual 2\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -431,40 +394,10 @@
         "print(\"fim\")\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "pK_qF6t88WIi",
-        "outputId": "ac757be0-0311-40b4-bc96-3e07cb109227"
+        "id": "pK_qF6t88WIi"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "11\n",
-            "2\n",
-            "12\n",
-            "3\n",
-            "13\n",
-            "4\n",
-            "14\n",
-            "5\n",
-            "15\n",
-            "6\n",
-            "16\n",
-            "7\n",
-            "17\n",
-            "8\n",
-            "18\n",
-            "9\n",
-            "19\n",
-            "10\n",
-            "fim\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -498,22 +431,10 @@
         "print(num)\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "lr9RWo3u-Bgx",
-        "outputId": "5a354ead-e88e-479b-8c6d-9311c19d08ae"
+        "id": "lr9RWo3u-Bgx"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[2, 3, 2, 4, 4]\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -522,25 +443,10 @@
         "num"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "CZctZWAH-gi7",
-        "outputId": "90f8c3a0-2d2b-42c7-c47e-733d329c16f8"
+        "id": "CZctZWAH-gi7"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[2, 3, 2, 4, 4, 8]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 13
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -549,25 +455,10 @@
         "num"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "9c28Mvy1-oY0",
-        "outputId": "0a889803-cedc-4267-ff01-4bb3cd713747"
+        "id": "9c28Mvy1-oY0"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[0, 2, 2, 4, 8]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 15
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -576,25 +467,10 @@
         "num"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Ilgb4qpw_Uu5",
-        "outputId": "a1515818-0a03-4ab3-ed3a-d0c8bd26571d"
+        "id": "Ilgb4qpw_Uu5"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[0, 2, 0, 2, 4, 8]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 16
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -603,25 +479,10 @@
         "num"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "o9gZnOCk_X-z",
-        "outputId": "6cbc8d19-f12b-4d6e-c0b8-5dd1582f487b"
+        "id": "o9gZnOCk_X-z"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[0, 2, 0, 2, 8]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 20
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -630,25 +491,10 @@
         "num"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "A6Xw7jYg_q64",
-        "outputId": "68a9b613-fed3-40d6-bb8a-f53efe45b271"
+        "id": "A6Xw7jYg_q64"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[0, 2, 0, 8]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 21
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -674,22 +520,10 @@
         "\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "8wUjB6Wd_7KR",
-        "outputId": "6925ceda-751f-4fe6-af3a-955094a8c6ec"
+        "id": "8wUjB6Wd_7KR"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "{'nome': 'Isabella', 'sexo': 'feminino', 'idade': 23}\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -698,22 +532,10 @@
         "print (pessoas)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Drze65EwAWVo",
-        "outputId": "d0c32af4-e11c-4b08-9e8c-268da92f13fc"
+        "id": "Drze65EwAWVo"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "{'nome': 'Isabella', 'sexo': 'feminino', 'idade': 23, 'hobbie': 'ler'}\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -722,22 +544,10 @@
         "print(pessoas)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ZEeQRHdWAhsB",
-        "outputId": "f2c07f57-44f4-47f5-f01f-532e7d8e49eb"
+        "id": "ZEeQRHdWAhsB"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "{'nome': 'Isabella', 'sexo': 'feminino', 'hobbie': 'ler'}\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -757,7 +567,7 @@
       "metadata": {
         "id": "OC8ZIMoVfv6z"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -766,23 +576,10 @@
         "identificacao('Isabella',23)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "0fT9s4_7hM3A",
-        "outputId": "32f9699e-4d8e-4d5f-85c3-7e71acd152d7"
+        "id": "0fT9s4_7hM3A"
       },
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Olá Isabella \n",
-            "Voce é jovem, tem apenas 23\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -798,7 +595,7 @@
       "metadata": {
         "id": "2RnaTTDkhTVl"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -807,22 +604,10 @@
         "maior(26,26)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "-J52pe4YiC3F",
-        "outputId": "a2a9178c-ace9-470b-b396-4fa6aaa09c7d"
+        "id": "-J52pe4YiC3F"
       },
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Os numeros são iguais\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -841,7 +626,7 @@
       "metadata": {
         "id": "U6xSTaM5iFsn"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -851,22 +636,103 @@
         "pitagoras(3,4,\"?\")"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "SVnpfa1PjAa6",
-        "outputId": "6993bae1-c136-4d02-a88e-8c0d8dbe13f0"
+        "id": "SVnpfa1PjAa6"
       },
-      "execution_count": 18,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "A hipotenusa é 3\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Função lambda e map"
+      ],
+      "metadata": {
+        "id": "gD49xhj-vxMh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def area_quadrado (l):\n",
+        "  area = l**2\n",
+        "  print (\"Area do quadrado é\", area)"
+      ],
+      "metadata": {
+        "id": "px5-NXpRv2Ac"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "area_quadrado (5)"
+      ],
+      "metadata": {
+        "id": "PZPaWPkJwAUT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "area_quadrado2 = lambda x: x**2"
+      ],
+      "metadata": {
+        "id": "BUinFdsmwEam"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "area_quadrado2(7)"
+      ],
+      "metadata": {
+        "id": "qF9nADgEwJt0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "area_retangulo = lambda b,h: b*h "
+      ],
+      "metadata": {
+        "id": "nAFloUbfwOsq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "area_retangulo(5,3)"
+      ],
+      "metadata": {
+        "id": "wbFhK8SRwWtu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#uma vantaggem é quando se utiliza juntamente com outros metodos\n",
+        "#map faz essa junção\n",
+        "\n",
+        "L = [4,3,6,8,4,3,11,5]\n",
+        "area = list(map(lambda x: x**2,L))\n",
+        "print(area)"
+      ],
+      "metadata": {
+        "id": "e_WO0bHIwaht"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
